--- a/PythFilm/database/templates/base/quan_ly.html
+++ b/PythFilm/database/templates/base/quan_ly.html
@@ -55,6 +55,7 @@
                 <li><a href="{% url 'danh_sach_ve' %}">Quản lý vé</a></li>
                 <li><a href="{% url 'danh_sach_ghe_ngoi' %}">Quản lý ghế ngồi</a></li>
                 <li><a href="{% url 'danh_sach_combo' %}">Quản lý Combo</a></li>
+                <li><a href="{% url 'danh_sach_binh_luan' %}">Quản lý bình luận</a></li>
             </ul>
         </nav>
 
